syntax = "proto3";
option go_package = "auth";
package auth;

import "google/api/annotations.proto";


message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string error = 1;
    string error_description = 2;
    string access_token = 3;
    string id = 4;
}

service AuthService {
    rpc Login (AuthRequest) returns (AuthResponse) {
        option (google.api.http) = {
            post: "/v1/auth/login"
            body: "*"
        };
    }
    rpc Register (AuthRequest) returns (AuthResponse) {
        option (google.api.http) = {
            post: "/v1/auth/register"
            body: "*"
        };
    }
}